@@ -1,3 +1,8 @@
+Fri Mar 15 11:49:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+	* TAO_IDL/be/be_visitor_interface/ami4ccm_conn_ex_idl.cpp:
+	  Derive the implied AMI4CCM connector from ::CCM_AMI::AMI_Base
+
 Fri Mar 15 11:25:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
 	* TAO_IDL/be/be_visitor_component/component_svs.cpp:
